# seance

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum  main.go  seance.go  seance_cli.go  seance_test.go
.claude/: settings.local.json
.github/workflows/: release.yml
cmd/: BUILD.bazel  main.go
frontend/: help.js  index.html  login.html  playground.js  sessions.html  style.css
ideas/: tunnel.md
internal/editor/: BUILD.bazel  editor.go  embed_darwin_amd64.go  embed_darwin_arm64.go  embed_linux_amd64.go  embed_linux_arm64.go  embed_stub.go  embed_stub_lite.go
internal/session/: BUILD.bazel  session.go  session_test.go
internal/tui/: BUILD.bazel  keys.go  model.go  provider.go  provider_local.go  provider_remote.go  styles.go
