module(
    name = "seance",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_creack_pty",
    "com_github_gorilla_websocket",
    "org_golang_x_term",
)

# code-server release tarballs (v4.108.2)
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "code_server_linux_amd64",
    urls = ["https://github.com/coder/code-server/releases/download/v4.108.2/code-server-4.108.2-linux-amd64.tar.gz"],
    downloaded_file_path = "code-server.tar.gz",
)

http_file(
    name = "code_server_linux_arm64",
    urls = ["https://github.com/coder/code-server/releases/download/v4.108.2/code-server-4.108.2-linux-arm64.tar.gz"],
    downloaded_file_path = "code-server.tar.gz",
)

http_file(
    name = "code_server_macos_amd64",
    urls = ["https://github.com/coder/code-server/releases/download/v4.108.2/code-server-4.108.2-macos-amd64.tar.gz"],
    downloaded_file_path = "code-server.tar.gz",
)

http_file(
    name = "code_server_macos_arm64",
    urls = ["https://github.com/coder/code-server/releases/download/v4.108.2/code-server-4.108.2-macos-arm64.tar.gz"],
    downloaded_file_path = "code-server.tar.gz",
)
