load("@rules_go//go:def.bzl", "go_library")

# Copy the platform-specific code-server tarball to the name expected by the embed directive.
genrule(
    name = "code_server_archive",
    srcs = select({
        "@rules_go//go/platform:darwin_arm64": ["@code_server_macos_arm64//file"],
        "@rules_go//go/platform:darwin_amd64": ["@code_server_macos_amd64//file"],
        "@rules_go//go/platform:linux_amd64": ["@code_server_linux_amd64//file"],
        "@rules_go//go/platform:linux_arm64": ["@code_server_linux_arm64//file"],
        "//conditions:default": [],
    }),
    outs = ["code-server.tar.gz"],
    cmd = select({
        "@rules_go//go/platform:darwin_arm64": "cp $< $@",
        "@rules_go//go/platform:darwin_amd64": "cp $< $@",
        "@rules_go//go/platform:linux_amd64": "cp $< $@",
        "@rules_go//go/platform:linux_arm64": "cp $< $@",
        "//conditions:default": "touch $@",
    }),
)

# Empty tarball for lite builds (no code-server).
genrule(
    name = "code_server_archive_empty",
    srcs = [],
    outs = ["code-server-empty.tar.gz"],
    cmd = "touch $@",
    tags = ["manual"],
)

# Full editor library — embeds the real code-server tarball.
go_library(
    name = "editor",
    srcs = [
        "editor.go",
    ] + select({
        "@rules_go//go/platform:darwin_arm64": ["embed_darwin_arm64.go"],
        "@rules_go//go/platform:darwin_amd64": ["embed_darwin_amd64.go"],
        "@rules_go//go/platform:linux_amd64": ["embed_linux_amd64.go"],
        "@rules_go//go/platform:linux_arm64": ["embed_linux_arm64.go"],
        "//conditions:default": ["embed_stub.go"],
    }),
    embedsrcs = [":code_server_archive"],
    importpath = "seance/internal/editor",
    visibility = ["//:__subpackages__"],
)

# Lite editor library — always uses stub (no code-server).
# Tagged "manual" so it is not built by `bazel build //...` or `bazel test //...`.
# Build explicitly via: bazel build //cmd:run_lite
go_library(
    name = "editor_lite",
    srcs = [
        "editor.go",
        "embed_stub_lite.go",
    ],
    embedsrcs = [":code_server_archive_empty"],
    importpath = "seance/internal/editor",
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)
