load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tui",
    srcs = [
        "keys.go",
        "model.go",
        "styles.go",
    ],
    importpath = "seance/internal/tui",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/session",
        "@com_github_charmbracelet_bubbles//key",
        "@com_github_charmbracelet_bubbles//textinput",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)
